# python-coding-test

./: .flake8  Makefile  README.md  pyproject.toml
src/: main.py  models.py  routes.py  services.py  tests.py  utils.py
src/routers/: compare.py
src/static/css/: styles.css
src/templates/: index.html
src/tests/: tests.py
